# ChangeLog for app-xemacs/edit-utils
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/edit-utils/ChangeLog,v 1.37 2011/07/22 11:24:58 xarthisius Exp $

*edit-utils-2.55 (11 Jul 2014)

  11 Jul 2014; Mats Lidell <matsl@gentoo.org> +edit-utils-2.55.ebuild:
  Pre release version bump.

*edit-utils-2.52 (07 Mar 2014)

  07 Mar 2014; Mats Lidell <matsl@gentoo.org> -edit-utils-2.51.ebuild,
  +edit-utils-2.52.ebuild:
  Upstream experimental version bump

*edit-utils-2.51 (17 Jul 2013)

  17 Jul 2013; Mats Lidell <matsl@gentoo.org> +edit-utils-2.51.ebuild,
  +metadata.xml:
  Upstream experimental version bump and use EAPI=5
