@@ -1,2 +1,3 @@
 DIST edit-utils-2.52-pkg.tar.gz 1136341 SHA256 c5ff956ac9fa8fa1aa2ec317f0edefe07a7e966ef912126dcf2ea57df7196ce4 SHA512 45f0a8b86692b2bf59f4fe671357bca70b2f413e32ea572f2f5f1ec23b49b0f884642c453a74025823ba1939868383484c7d878cf64151ab3be6869c74aea123 WHIRLPOOL 1bb1c774cfe2adb0996ba28ff96919fa37af0e46a40ce99e8d1190e93b6f572d063fa4a490140152970792dd06f12f88d3bbd8386f23cbad4d5c8c62855cd1bb
 DIST edit-utils-2.55-pkg.tar.gz 1136287 SHA256 692e92e1ed133d2d867c79c4d664077fec26c254604971ba842250a509215130 SHA512 d543b901a1604a3b361ff3847242f6ce1e867734aed6074f4a7d5cc1206d8b4729c471613ee9dc825102571a866176c8171c4b011ef2eab8272591bea1244274 WHIRLPOOL 9189d587412a8c76681f716ea0267d7eb4a1e577c9e82fc631f232604e605fafe74f686638f69128a7bcedbd6ac8768e741c72fc22704f024bb4e0fbb5b0237b
+DIST edit-utils-2.56-pkg.tar.gz 1136518 SHA256 39cb66d2182eb9508214b5a9f60ca302df675ce964e78bad91ac0e33603f6dc2 SHA512 5763a4870604d1f7e709883c25f3ee36e06849794e4a27e49d75cac810510bb72fddb700cc64b1fabc751972e482abf0ded45ba26c0b0d067c8425c594a81049 WHIRLPOOL 4855868214239b727893957eb93d62a5be9995e47e254526df82395bcb318f94aea726baed93a681b46b0e11044a472bf612e013543e456bbba27f6017fdaaa1
