@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/edit-utils/ChangeLog,v 1.37 2011/07/22 11:24:58 xarthisius Exp $
 
+*edit-utils-2.56 (25 Oct 2014)
+
+  25 Oct 2014; Mats Lidell <matsl@gentoo.org> +edit-utils-2.56.ebuild:
+  Pre release version bump.
+
 *edit-utils-2.55 (11 Jul 2014)
 
   11 Jul 2014; Mats Lidell <matsl@gentoo.org> +edit-utils-2.55.ebuild:
